fix reasons why horizontal alignment

--- a/css/custom.css
+++ b/css/custom.css
@@ -200,6 +200,7 @@
     position: absolute;
     bottom:   60px;
     right:    50%;
+    padding:  0;
 }
 
 #landing-screen .row {
